<resources>
    <string name="app_name">E-Stationary</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="gmailContentDescription">"Gmail Login "</string>
    <string name="facebookContentDescription">Facebook Login</string>
    <string name="logoContentDescription">e-Stationary Logo</string>
    <string name="orLoginWith">login with</string>
    <string name="keepMeLogin">Keep me Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="registerWith">register with</string>
    <string name="or">OR</string>
    <string name="emailAddress">Email address</string>
    <string name="phoneNumber">Phone number</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="agreeTnC"><![CDATA[I agree with the Terms & Condition]]></string>
    <string name="register">Register</string>
    <string name="talkToUs">Talk to Us</string>
    <string name="complain">Complain</string>
    <string name="complaintCategories">Complaint categories:</string>
    <string name="lateDelivery">Late Delivery</string>
    <string name="faultyProducts">Faulty Products</string>
    <string name="unreasonablePrice">Unreasonable Price</string>
    <string name="poorHospitality">Poor Hospitality</string>
    <string name="others">Others</string>
    <string name="orderNo">Order No</string>
    <string name="complaint">Complaint</string>
    <string name="send">Send</string>
    <string name="typeYourMessageHere">Type your message here</string>
    <string name="aboutUs">Our Office:\n\nE-Stationary Sdn Bhd\n69, Jalan Tun Sambanthan
    \n51200, Kuala Lumpur\n\n\nEmail: e-stationary@outlook.com\n\n\nCALL:\nWong Tao Zhe                  011-1111111</string>
    <string name="shoppingCartTitle">SHOPPING CART</string>
    <string name="deliveryDetailsTitle">DELIVERY DETAILS</string>
    <string name="paymentTitle">PAYMENT</string>
    <string name="doneTitle">DONE</string>
    <string name="LogoDescription">Logo Description</string>
    <string name="shoppingCartTitleIcon">SHOPPING CART ICON</string>
    <string name="deliveryDetailsTitleIcon">DELIVERY DETAILS ICON</string>
    <string name="paymentTitleIcon">PAYMENT ICON</string>
    <string name="doneTitleIcon">DONE ICON</string>
    <string name="address">Delivery Address:</string>
    <string name="postal">Postal Code:</string>
    <string name="city">City:</string>
    <string name="states">States:</string>
    <string name="additionalInformation">Additional Information:</string>
    <string name="clearCart">Clear Shopping Cart</string>
    <string name="nextButton">Next</string>
    <string name="backButton">Back</string>
    <string-array name="state_choice">
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Malacca</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
    </string-array>
    <string name="orderSuccess">Your Order Had Been Placed Successfully</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkbox">tzData.checkbox</string>
    <string name="email">tzData.email</string>
    <string name="passwor">tzData.passwor</string>
    <string name="resetDescription">Forget your Password? don\'t worry we\'ve got your back</string>
    <string name="welcome">Welcome to our store</string>
    <string name="welcome_det">You can now buy stationaries online through our application. Delivery is also available.</string>
    <string name="date1">24-09-2018  16:35</string>
    <string name="christmas">Christmas Sale</string>
    <string name="christmas_det">Shop on 25 December for a lot of discounts on several of our products.</string>
    <string name="date2">03-11-2019  13:30</string>
    <string name="paymentTitle1">1. Payment Details</string>
    <string name="paymentTitle2">2. Payment Method</string>
    <string name="orderPayment">Order Payment</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="onlineBanking">Online Banking</string>
    <string name="ewallet">E-Wallet</string>
    <string name="cashOnDelivery">Cash On Delivery</string>
    <string name="card">Credit/Debit Card</string>
</resources>