<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

    <ImageView
        android:id="@+id/e_stationary"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/logoContentDescription"
        app:srcCompat="@drawable/e_stationary_logo"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="40dp" />

    <Button
        android:id="@+id/btnLoginTemp"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnRegistrationTemp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="125dp"
        android:background="#FDC149"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/login"
        android:textColor="#912503"
        android:visibility="visible"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="189dp" />

    <Button
        android:id="@+id/btnRegistrationTemp"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="120dp"
        android:background="#FDC149"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/registration"
        android:textColor="#912503"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="189dp" />

    <ImageButton
        android:id="@+id/imgbtnFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="@dimen/imgbtnFacebookTop"
        android:contentDescription="@string/facebookContentDescription"
        android:padding="0dp"
        app:srcCompat="@drawable/facebook_logo" />

    <ImageButton
        android:id="@+id/imgbtnGmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/imgbtnFacebookTop"
        android:layout_marginEnd="@dimen/imgbtnFacebook"
        android:contentDescription="@string/gmailContentDescription"
        android:padding="0dp"
        app:srcCompat="@drawable/gmail_logo" />

        <TextView
            android:id="@+id/txtRegisterWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/e_stationary"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="@string/registerWith"
            android:gravity="center_horizontal"
            android:textColor="#6E6E6E"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/e_stationary"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="165dp"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:textColor="#6E6E6E"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_below="@+id/txtOr"
            android:hint="@string/emailAddress"
            android:inputType="textEmailAddress"
            android:layout_width="@dimen/tzbasicInfoColumn"
            android:layout_height="@dimen/tzbasicInfoColumnHeight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:padding="10dp"
            android:background="@drawable/taozhemainpagestyle"/>

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="@dimen/tzbasicInfoColumn"
            android:layout_height="@dimen/tzbasicInfoColumnHeight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/taozhemainpagestyle"
            android:gravity="start"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:padding="10dp"
            android:layout_below="@+id/txtEmail"/>

        <EditText
            android:id="@+id/txtUsernameRegister"
            android:layout_width="@dimen/tzbasicInfoColumn"
            android:layout_height="@dimen/tzbasicInfoColumnHeight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/taozhemainpagestyle"
            android:gravity="start"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:layout_below="@id/txtPhoneNumber"/>

        <EditText
            android:id="@+id/txtPasswordRegister"
            android:layout_width="@dimen/tzbasicInfoColumn"
            android:layout_height="@dimen/tzbasicInfoColumnHeight"
            android:layout_below="@id/txtUsernameRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/taozhemainpagestyle"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="@dimen/tzbasicInfoColumn"
            android:layout_height="@dimen/tzbasicInfoColumnHeight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/taozhemainpagestyle"
            android:gravity="start"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_below="@id/txtPasswordRegister"/>

        <CheckBox
            android:id="@+id/chkboxAgreeTnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtConfirmPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/agreeTnC"
            android:textColor="@color/hint"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_below="@id/chkboxAgreeTnC"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:letterSpacing="0.1"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif"
            android:textColor="#FFFFFF"
            android:background="@color/defaultBackground"/>

    </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>