<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-16dp">

            <ImageView
                android:id="@+id/e_stationary"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/logoContentDescription"
                app:srcCompat="@drawable/e_stationary_logo"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="40dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/title">

                <TextView
                    android:layout_width="181dp"
                    android:layout_height="36dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_toEndOf="@+id/imageView2"
                    android:fontFamily="sans-serif"
                    android:text="@string/paymentTitle"
                    android:textColor="#020202"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="53dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/LogoDescription"
                    app:srcCompat="@drawable/payment_icon" />


            </RelativeLayout>

            <Space
                android:layout_width="1dp"
                android:layout_height="15dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="93dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/shoppingCartTitleIcon"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/shopping_cart_white" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="93dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/deliveryDetailsTitleIcon"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageButton3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/delivery_detail" />

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="93dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/paymentTitleIcon"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton6"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageButton4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/payment_yellow" />

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="58dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/doneTitleIcon"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageButton5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/done" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="match_parent">

                <TableLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/clear_cart_button"
                    android:shrinkColumns="*"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_span="2"
                        android:background="@drawable/title"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView29"
                            android:layout_width="wrap_content"
                            android:layout_span="2"
                            android:textColor="@color/black"
                            android:paddingLeft="5dp"
                            android:textStyle="bold"
                            android:layout_height="29dp"
                            android:text="@string/paymentTitle1" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:background="@drawable/black_border"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/orderPayment"
                            android:layout_width="197.5dp"
                            android:layout_height="29dp"
                            android:paddingLeft="5dp"
                            android:text="@string/orderPayment"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/orderPaymentAmount"
                            android:layout_width="197.5dp"
                            android:layout_height="29dp"
                            android:gravity="right"
                            android:paddingRight="5dp"
                            android:text="TextView"
                            android:textColor="@color/black" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:background="@drawable/black_border"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/discount"
                            android:layout_width="197.5dp"
                            android:layout_height="29dp"
                            android:paddingLeft="5dp"
                            android:text="@string/discount"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/discountAmount"
                            android:layout_width="197.5dp"
                            android:layout_height="29dp"
                            android:gravity="right"
                            android:paddingRight="5dp"
                            android:text="TextView"
                            android:textColor="@color/black" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:background="@drawable/black_border"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/total"
                            android:layout_width="197.5dp"
                            android:layout_height="29dp"
                            android:paddingLeft="5dp"
                            android:text="@string/total"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/totalAmount"
                            android:layout_width="197.5dp"
                            android:layout_height="29dp"
                            android:gravity="right"
                            android:paddingRight="5dp"
                            android:text="TextView"
                            android:textColor="@color/black" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:background="@drawable/title"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView30"
                            android:layout_width="wrap_content"
                            android:layout_height="29dp"
                            android:layout_span="2"
                            android:paddingLeft="5dp"
                            android:text="@string/paymentTitle2"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"

                        android:background="@drawable/black_border"
                        android:layout_height="match_parent" >

                        <Button
                            android:id="@+id/cdCardbtn"
                            android:layout_width="163dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/payment_button"
                            android:padding="2dp"
                            android:text="@string/card" />

                        <Button
                            android:id="@+id/ewalletbtn"
                            android:layout_width="wrap_content"
                            android:background="@drawable/payment_button"
                            android:padding="2dp"
                            android:layout_height="wrap_content"
                            android:text="@string/ewallet" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:background="@drawable/black_border"
                        android:layout_height="match_parent" >

                        <Button
                            android:id="@+id/onlineBankingbtn"
                            android:layout_width="wrap_content"
                            android:background="@drawable/payment_button"
                            android:padding="2dp"
                            android:layout_height="wrap_content"
                            android:text="@string/onlineBanking" />

                        <Button
                            android:id="@+id/cashOnDeliverybtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/payment_button"
                            android:padding="2dp"
                            android:text="@string/cashOnDelivery" />
                    </TableRow>

                </TableLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="36dp">

                <Button
                    android:id="@+id/bacnPbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@color/light_red"
                    android:text="@string/backButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/nextPbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="30dp"
                    android:background="@color/light_red"
                    android:text="@string/nextButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>