<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/e_stationary"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/logoContentDescription"
            app:srcCompat="@drawable/e_stationary_logo"
            android:textColor="#912503"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="189dp"/>

        <ImageView
            android:id="@+id/imgResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/e_stationary"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/reset" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="@dimen/tzbasicInfoColumn"
            android:layout_height="@dimen/tzbasicInfoColumnHeight"
            android:layout_below="@+id/resetDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/taozhemainpagestyle"
            android:gravity="start"
            android:hint="@string/emailAddress"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="@dimen/tzbasicInfoColumn"
            android:layout_height="@dimen/tzbasicInfoColumnHeight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/taozhemainpagestyle"
            android:gravity="start"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:padding="10dp"
            android:layout_below="@+id/txtEmail"/>

        <Button
            android:id="@+id/verifyCredentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPhoneNumber"
            android:layout_marginTop="30dp"
            android:text="Done"
            android:background="@color/defaultBackground"
            android:textColor="#FFFFFF"
            android:letterSpacing="0.1"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/resetDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgResetPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/resetDescription"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

    </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>