<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="-26dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-16dp">

            <ImageView
                android:id="@+id/e_stationary"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/logoContentDescription"
                app:srcCompat="@drawable/e_stationary_logo"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="40dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/txtSendMessage"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@drawable/taozhemainpagestyle"
                    android:gravity="start"
                    android:hint="@string/typeYourMessageHere"
                    android:inputType="textMultiLine"
                    android:maxLines="20"
                    android:padding="10dp" />

                <ImageButton
                    android:id="@+id/imgbtnSentTalkToUsMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/txtSendMessage"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    app:srcCompat="@android:drawable/ic_menu_send" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="#7AF0FF">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth"
                    android:padding="20dp"
                    android:text="@string/aboutUs"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>